argocd/manifests/frigate/base/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: frigate-api
  namespace: frigate
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: frigate
  ports:
    - name: api
      port: 5000
      targetPort: 5000
      protocol: TCP
