argocd/manifests/frigate/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frigate
  namespace: frigate
spec:
  selector:
    app: frigate
  ports:
    - name: authenticated
      port: 8971
      targetPort: 8971
      protocol: TCP
