argocd/manifests/frigate/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frigate
  namespace: frigate
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/target: k3s-prod.levangie.dev
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: frigate.levangie.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frigate
                port:
                  number: 8971
  tls:
    - hosts:
        - frigate.levangie.dev
      secretName: frigate-tls
