argocd/manifests/frigate/base/frigate-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frigate-backend-access
  namespace: frigate
spec:
  podSelector:
    matchLabels:
      app: frigate
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frigate
              frigate.levangie.dev/proxy: "true"
        - ipBlock:
            cidr: 172.20.20.0/24
        - ipBlock:
            cidr: 10.42.0.0/16
        - ipBlock:
            cidr: 10.43.0.0/16
      ports:
        - protocol: TCP
          port: 8971
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frigate-proxy-ingress
  namespace: frigate
spec:
  podSelector:
    matchLabels:
      app: frigate
      frigate.levangie.dev/proxy: "true"
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 4180
